--- a/style.css
+++ b/style.css
@@ -247,9 +247,9 @@ h2 {
   height: auto;
   object-fit: contain; /* prevents cropping */
   border-radius: 8px;
-  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /*-webkit-filter: grayscale(100%);
+  filter: grayscale(100%);*/
 }
 
 .intro-right {
