--- a/style.css
+++ b/style.css
@@ -522,14 +522,17 @@ h2, a{
 
 @media (min-width: 768px) {
   .coach-cards {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 .coach-card {
   background: #8E1616;
   background: linear-gradient(180deg,rgba(142, 22, 22, 1) 0%, rgba(42, 42, 53, 1) 75%);
+  /*
   padding: 1.5rem 3rem;
+  */
+  padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -748,5 +751,6 @@ section {
   position: relative;
   scroll-margin-top: 100px;
 }
+
 
 
