--- a/style.css
+++ b/style.css
@@ -566,7 +566,7 @@ h2, a{
   font-family: 'Roboto Slab', serif;
   color: #ffcf99;
   font-size: 1rem;
-  text-align: left;
+  text-align: justify;
 }
 
 .sectionFAQ {
@@ -751,6 +751,7 @@ section {
   position: relative;
   scroll-margin-top: 100px;
 }
+
 
 
 
